[gd_scene load_steps=5 format=3 uid="uid://cxdyrnlbs0811"]

[ext_resource type="Script" path="res://scenes/task_button/task_button.gd" id="1_dfaon"]
[ext_resource type="Shader" path="res://scenes/task_button/assets/task_button.gdshader" id="2_o3jvt"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ykn66"]
radius = 170.238

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xwbu7"]
shader = ExtResource("2_o3jvt")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_thickness = 1.0

[node name="TaskButton" type="Area2D"]
monitorable = false
script = ExtResource("1_dfaon")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ykn66")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_xwbu7")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
